# fastapi-gen

./: .coveragerc  .env  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dump.rdb  main.py  pyproject.toml
bash/: run.sh
builder/: __init__.py  app_manager.py  constants.py  main.py  run.py  utils.py
example-output/: group_manager.py  openapi.json  pyproject.toml
example/alembic/output/backend/: README.md  openapi.json  pyproject.toml  requirements.txt  service.py
example/alembic/output/backend/db/: constants.py  models.py  reservation_manager.py  restaurant_manager.py  review_manager.py  user_manager.py
example/alembic/output/backend/db/alembic/: env.py
example/alembic/output/backend/models/: models.py
example/alembic/output/backend/routes/: reservation_routes.py  restaurant_routes.py  review_routes.py  user_routes.py
example/alembic/output/backend/src/: reservation_routes.py  restaurant_routes.py  review_routes.py  user_routes.py
example/alembic/output/backend/src/db/: constants.py  models.py  reservation_manager.py  restaurant_manager.py  review_manager.py  user_manager.py  utils.py
example/alembic/output/backend/src/db/alembic/: env.py
example/alembic/output/backend/src/models/: models.py
example/output/src/: group_manager.py  mongo.py  openapi.json  pyproject.toml  requirements.txt  reservation_manager.py  restaurant_manager.py  review_manager.py  service.py  user_manager.py
example/output/src/alembic/: manager.py  models.py
example/output/src/client/docs/: Cuisine.md  Id1.md  Rating.md  Review.md
example/output/src/client/openapi_client/api/: __init__.py  default_api.py
example/output/src/client/openapi_client/models/: price_range.py  review.py  role.py  special_requests.py
example/output/src/client/test/: test_id.py  test_id3.py  test_price_range.py  test_rating.py  test_role.py  test_user.py
example/output/src/models/: models.py
example/output/src/src/: restaurant_manager.py  review_manager.py
example/output/src/src/models/: models.py
examples/: models.yaml
fastapi_gen/: app_manager.py  constants.py  main.py  utils.py
output/: group_manager.py  input_manager.py  output_manager.py  package-lock.json  package.json  pyproject.toml  service.py  task_manager.py  user_manager.py
output/models/: models.py
output/my-app/: package-lock.json  package.json
output/my-app/src/api/: runtime.ts
output/my-app/src/api/apis/: DefaultApi.ts
output/my-app/src/api/models/: Group.ts  HTTPValidationError.ts  User.ts  ValidationError.ts  index.ts
output/nicksapp/: package-lock.json  package.json
output/nicksapp/src/api/openapi_client/: __init__.py
output/nicksapp/src/api/openapi_client/api/: default_api.py
output/nicksapp/src/api/test/: test_default_api.py  test_validation_error.py
(+643 files in other folders)
