[tool.poetry]
name = "service"
version = "0.1.0"
description = "My Generated Service"
authors = ["TODO"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
pydantic = "^2.6.4"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pymongo = "^4.6.2"
certifi = "^2024.2.2"
rich = "^13.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"