[tool.poetry]
name = "reservations-app"
version = "1.0.0"
description = "A restaurant reservations service"
authors = ["<enter your email>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
pydantic = "^2.6.4"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pymongo = "^4.6.2"
certifi = "^2024.2.2"
rich = "^13.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
